--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
         ]
     },
     "twitter": {
-        "consumerKey": "uxFOwPCuFOOuST0CHxt1w",
-        "consumerSecret": "fX1noJXvWXgUcFQpeMNdj2gCMsCp3SEyoGMLQVUFatk"
+        "consumerKey": "omKBaoTjsEY3DnemkspWmA",
+        "consumerSecret": "yYusCVVKdtbn5TM2hU1ybbGSUYMPAfMFrpKb4f8KYiY"
     }
 }
