--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+i{
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
@@ -11,5 +11,6 @@
     "socket.io": "~0.9.16",
     "uuid": "~1.4.1",
     "node-twitter-api": "~1.1.3"
-  }
+  },
+  "license": "MIT"
 }
